# waboardsailing

./: .envrc  .gitignore  .linkcheckerrc  .markdownlint.json  .pre-commit-config.yaml  Devnotes.md  LocalSettings.php  MEDIAWIKI_VERSION.md  Makefile  README.md  Untitled.ipynb  custom_jinja_filters.py  docker-compose.yml  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  tailwind.config.js  tasks.py
content/: warning.md  welcome.md
content/pages/: all.md  contributing.md  error.md  forecast.md  home.html  home.md  index.html  index.md  map.html  sitemap.md  sites.md  warning.md  welcome.md
content/pages/resources/: getting_started.md  index.md
content/pages/ross/: contributing.md  index.html  map.html
content/pages/sites/: Magnuson_Park.md  Sail_Sand_Point.md  adams_street.md  crescent_beach.md  desert_aire.md  golden_gardens.md  index.md  lake_washington.md  mags.md  martha_washington_park.md  newcastle.md  oo_denny.md  rimrock.md  ssp.md  the_gorge.md  vantage.md
content/pages/sites/the_gorge/: index.md  maryhill.md  newcastle.md  roosevelt.md
content/pages/unpublished/: golden_gardens.md
docker/: docker-compose.yml
docker/mediawiki_mod/: Dockerfile  README.md
mediawiki/: LocalSettings.php
mediawiki/customizations/: customtheme.xml
photoshop/: mags.psd  ssp.psd
plugins/: cookiecutter.json
plugins/pelican-cleanurl/: pyproject.toml  tasks.py
plugins/pelican-cleanurl/pelican/plugins/pelican_cleanurl/: __init__.py  test_pelican_cleanurl.py
plugins/pelican-page-hierarchy/: pyproject.toml
plugins/pelican-path-metadata/: CONTRIBUTING.md  README.md  pyproject.toml
plugins/pelican-path-metadata/pelican/plugins/pelican_path_metadata/: pelican_path_metadata.py  test_pelican_path_metadata.py
src/waboardsailing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tailwind_input/: tailwindinput.css
theme/static/css/: main.css
theme/templates/: all.html  bare.html  base.html  footer.html  home_page.html  map.html  navbar.html  page.html  site.html
website/: Makefile  custom_jinja_filters.py  tasks.py
website/content/pages/: index.html  map.html
website/content/pages/resources/: index.md
website/content/pages/sites/: adams_street.md  test.md  vantage.md
website/theme/templates/: base.html
windmap/: DEVNOTES.md  config.yaml  index.js  index.mjs  package-lock.json  package.json  tsconfig.json
windmap/src/: SiteProcessorClass.ts  cli.ts  config.ts  getPage.ts  index.ts  logging.ts  login.ts  main.ts  processTempestwx.ts  processiKitesurf.ts  storage.ts  types.d.ts
