[project]
authors = [
    {name = "Ross Rosen", email = "rrosen326@gmail.com"},
]

name = "waboardsailing"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.4.0",
]

[tool.uv]
dev-dependencies = [
    "markdown>=3.7",
    "livereload>=2.7.0",
    "pelican>=4.9.1",
    "invoke>=2.2.0",
    "pelican-cleanurl",
    "ruff>=0.6.4",
]
[tool.uv.workspace]
members = []

[tool.uv.sources]
pelican-cleanurl = { git = "https://github.com/rr326/pelican-cleanurl.git" }
